# Spoti2Tidal

./: Makefile  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
gui/: main_window.py  workers.py
models/: spotify.py
scripts/: inspect_spotify_models.py  test_api_limits.py  test_crossref.py
services/: spotify.py  tidal.py
src/: __init__.py  logging_config.py  main.py
src/gui/: dialogs.py  main_window.py  workers.py
src/gui/ui/: confirm_transfer_dialog.ui  login_tidal_dialog.ui  main_window.ui  progress_dialog.ui
src/models/: spotify.py
src/scripts/: test_crossref.py
src/services/: __init__.py  spotify.py  tidal.py
